Lanespacing complete no bugs detected yet

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -317,7 +317,7 @@ font-family: 'Satisfy', cursive;
 .highScore {
   border: solid black 1px;
 height:350px;
-width:400px;
+width:350px;
 background-color: #FFF;
 display: inline-block;
 float:left;
